--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
-    "@react-email/components": "^0.0.32",
+    "@react-email/components": "^1.0.1",
     "@react-pdf/renderer": "^4.3.1",
     "@types/jspdf": "^1.3.3",
     "apexcharts": "^4.4.0",
@@ -58,26 +58,26 @@
     "jodit": "^4.2.47",
     "jodit-react": "^4.1.2",
     "js-file-download": "^0.4.12",
-    "jspdf": "^2.5.2",
-    "jspdf-autotable": "^3.8.4",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.469.0",
     "moment": "^2.30.1",
     "moment-hijri": "^3.0.0",
-    "next": "15.1.4",
+    "next": "^16.0.7",
     "next-auth": "^4.24.11",
     "next-intl": "^4.3.4",
     "next-themes": "^0.4.4",
-    "react": "19.0.0",
+    "react": "^19.2.1",
     "react-apexcharts": "^1.7.0",
     "react-big-calendar": "^1.17.1",
     "react-calendar": "^5.1.0",
     "react-circular-progressbar": "^2.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "19.0.0",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.54.2",
     "react-hotkeys-hook": "^4.6.1",
     "react-icons": "^5.4.0",
-    "react-to-pdf": "^1.0.1",
+    "react-to-pdf": "^2.0.3",
     "react-to-print": "^3.0.4",
     "react-zoom-pan-pinch": "^3.7.0",
     "recharts": "^2.15.1",
@@ -109,12 +109,12 @@
     "@types/react-big-calendar": "^1.16.1",
     "@types/react-dom": "^19.1.2",
     "eslint": "^9",
-    "eslint-config-next": "15.1.4",
+    "eslint-config-next": "^16.0.7",
     "postcss": "^8",
     "prisma": "^6.4.0",
-    "react-email": "3.0.6",
+    "react-email": "^5.0.5",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.9.3"
   }
 }
